--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,19 +1,194 @@
+body{
+    overflow: hidden;
+}
 nav{
     width: 100%;
+    height: 8vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.25em;
 }
 nav span:nth-child(1){
-    width: 30%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+nav span:nth-child(1) img{
+    border-radius: 50%;
+    border: 1px solid black;
+    margin-left: 1em;
 }
 nav span:nth-child(2) a{
     margin-right: 2em;
     font-size: 1.3em;
     text-decoration: none;
     color: rgb(128, 128, 128);
+}
+.home{
+    height: 92vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.wrapper_anim{
+    width: 52vw;
+    padding: 2em;
+    margin-bottom: 5em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+.content_home{
+    width: 48vw;
+}
+/* •·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•·•· */
+/* animation text */
+
+
+:root {
+	--delay: 0;
+	--duration: 1000ms;
+	--iterations: 1;
+}
+
+.reveal-text1,
+.reveal-text1::after,
+.reveal-text2,
+.reveal-text2::after,
+.reveal-text,
+.reveal-text::after {
+	-webkit-animation-delay: var(--animation-delay, 2s);
+	        animation-delay: var(--animation-delay, 2s);
+	-webkit-animation-iteration-count: var(--iterations, 1);
+	        animation-iteration-count: var(--iterations, 1);
+	-webkit-animation-duration: var(--duration, 800ms);
+	        animation-duration: var(--duration, 800ms);
+	-webkit-animation-fill-mode: both;
+	        animation-fill-mode: both;
+	-webkit-animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
+	        animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+.reveal-text1,
+.reveal-text2,
+.reveal-text {
+	--animation-delay: var(--delay, 0);
+	--animation-duration: var(--duration, 800ms);
+	--animation-iterations: var(--iterations, 1);
+	position: relative;
+	font-size: 6em;
+    margin: 0;
+	-webkit-animation-name: clip-text;
+	        animation-name: clip-text;
+	color: #36494E;
+	white-space: nowrap;
+	cursor: default
+}
+.reveal-text1{
+    color: #435a61;
+    --delay:1.5s;
+}
+.reveal-text2{
+    color: #57747c;
+    --delay:2.3s;
+}
+.reveal-text1::after,
+.reveal-text2::after,
+.reveal-text::after {
+		content: "";
+		position: absolute;
+		z-index: 999;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: #f2f98b;
+		transform: scaleX(0);
+		transform-origin: 0 50%;
+		pointer-events: none;
+		-webkit-animation-name: text-revealer;
+		        animation-name: text-revealer;
+	}
+.reveal-text1::after{
+    background-color: #f9cd8b;
+}
+
+@-webkit-keyframes clip-text {
+	from {
+		-webkit-clip-path: inset(0 100% 0 0);
+		        clip-path: inset(0 100% 0 0);
+	}
+	to {
+		-webkit-clip-path: inset(0 0 0 0);
+		        clip-path: inset(0 0 0 0);
+	}
+}
+@keyframes clip-text {
+	from {
+		-webkit-clip-path: inset(0 100% 0 0);
+		        clip-path: inset(0 100% 0 0);
+	}
+	to {
+		-webkit-clip-path: inset(0 0 0 0);
+		        clip-path: inset(0 0 0 0);
+	}
+}
+
+
+@-webkit-keyframes text-revealer {
+	
+	0%, 50% {
+		transform-origin: 0 50%;
+	}
+	
+	60%, 100% {
+		transform-origin: 100% 50%;		
+	}
+
+	
+	60% {
+		transform: scaleX(1);
+	}
+	
+	100% {
+		transform: scaleX(0);
+	}
+}
+
+
+@keyframes text-revealer {
+	
+	0%, 50% {
+		transform-origin: 0 50%;
+	}
+	
+	60%, 100% {
+		transform-origin: 100% 50%;		
+	}
+
+	
+	60% {
+		transform: scaleX(1);
+	}
+	
+	100% {
+		transform: scaleX(0);
+	}
+}
+
+/* button of home page */
+.wrapper_anim button{
+    margin-top: 1em;
+    color: rgb(255, 255, 255);
+    background: #000000;
+    border: none;
+    padding: 0.5em 1em;
+    font-size: 24px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    width: 35%;
+    border-radius: 1em;
 }
