--- a/frontend/css/responsive.css
+++ b/frontend/css/responsive.css
@@ -1,22 +1,7 @@
-/* intro page responsive */
-@media (max-width:460px){
-    .intro{
-        display: block;
-    }
-    .body_intro{
-        font-size: 12px;
-    }
-}
-@media (max-width: 991px) and (min-width: 461px){
-    .intro{
-        display: block;
-    }
-    .intro .intro_image{
-        position: absolute;
-    }
-}
-
+/* ---------------------------------------------- */
 /* index page responsive */
+/* ---------------------------------------------- */
+
 @media (max-width:419px){
     .body_index{
         font-size: 9px;
@@ -55,5 +40,51 @@
     }
     .achiev_text{
         text-align: center;
+    }
+}
+
+/* ---------------------------------------------- */
+/* intro page responsive */
+/* ---------------------------------------------- */
+
+@media (max-width:460px){
+    .intro{
+        display: block;
+    }
+    .body_intro{
+        font-size: 12px;
+    }
+}
+@media (max-width: 991px) and (min-width: 461px){
+    .intro{
+        display: block;
+    }
+    .intro .intro_image{
+        position: absolute;
+    }
+}
+
+/* ---------------------------------------------- */
+/* gallery html */
+/* ---------------------------------------------- */
+
+@media (max-width:460px) and (min-width:400px){
+    #carouselExampleCaptions,
+    .carousel-item,
+    #carouselExampleCaptions ,.carousel-inner,.carousel-inner,.carousel-item{
+        font-size: 12px;
+    }
+    .carousel-caption h5{
+        font-size: 12px;
+    }
+}
+@media (max-width:399px){
+    #carouselExampleCaptions,
+    .carousel-item,
+    #carouselExampleCaptions ,.carousel-inner,.carousel-inner,.carousel-item{
+        font-size: 10px;
+    }
+    .carousel-caption h5{
+        font-size: 10px;
     }
 }
