--- a/frontend/css/gallery.css
+++ b/frontend/css/gallery.css
@@ -31,10 +31,11 @@
     justify-content: center;
     margin: 3em;
 }
-.carousel-caption{
+.carousel-caption span{
   background-color: rgba(0,0,0,0.4);
-  border-radius: 5em;
+  font-size: 1.4em;
   font-weight: 700;
+  padding: 0.1em 1em;
 }
 /* gallery part */
 .container_gallery{
