--- a/frontend/css/intro.css
+++ b/frontend/css/intro.css
@@ -1,5 +1,7 @@
-.body_intro{
-	overflow-x: hidden;
+.body_intro,html{
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
 }
 .intro{
 	display: flex;
