--- a/frontend/css/contact.css
+++ b/frontend/css/contact.css
@@ -1,5 +1,7 @@
-html{
-    overflow: hidden;
+.body_contact,html{
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
 }
 #contact{
     background-color: transparent!important;
