--- a/frontend/css/gallery.css
+++ b/frontend/css/gallery.css
@@ -1,5 +1,7 @@
 .body_gallery,html{
     overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
 }
 #carouselExampleCaptions ,.carousel-inner,.carousel-inner,.carousel-item{
     height: 30em;
