--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.body_index {
+.body_index,html{
     padding: 0.6em;
     overflow-x: hidden;
     max-width: 100%;
@@ -305,6 +305,16 @@ html{
   span:nth-child(23) {
 	animation: fade-in 0.8s 7.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
   }
+  span:nth-child(24) {
+	animation: fade-in 0.8s 7.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  span:nth-child(25) {
+	animation: fade-in 0.8s 8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  span:nth-child(26) {
+	animation: fade-in 0.8s 8.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
   
   
   @keyframes fade-in {
