--- a/frontend/css/background.css
+++ b/frontend/css/background.css
@@ -1,207 +1,325 @@
-
 @keyframes fade_text {
-    0%  { opacity:1;}
-    10%  { opacity:.8; }
-    25%  { opacity :.5; }
-    50%  { opacity:.3; }
-    65%  { opacity:.5; }
-    90%  { opacity: .8; }
-    100% { opacity:1; }
+  0% {
+    opacity: 1;
   }
-  @-o-keyframes fade_text{
-      0%  { opacity:1;}
-    10%  { opacity:.8; }
-    25%  { opacity :.5; }
-    50%  { opacity:.3; }
-    65%  { opacity:.5; }
-    90%  { opacity: .8; }
-    100% { opacity:1; }
+
+  10% {
+    opacity: .8;
   }
-  @-moz-keyframes fade_text{
-     0%  { opacity:1;}
-    10%  { opacity:.8; }
-    25%  { opacity:.5; }
-    50%  { opacity:.3; }
-    65%  { opacity:.5; }
-    90%  { opacity: .8; }
-    100% { opacity:1; }
+
+  25% {
+    opacity: .5;
   }
-  @-webkit-keyframes fade_text{
-     0%  { opacity:1;}
-    10%  { opacity:.8; }
-    25%  { opacity:.5; }
-    50%  { opacity:.3; }
-    65%  { opacity:.5; }
-    90%  { opacity: .8; }
-    100% { opacity:1; }
+
+  50% {
+    opacity: .3;
   }
-  .text_fade{
-     -webkit-animation: fade_text 8s infinite ease-in;
-     -moz-animation: fade_text 8s infinite ease-in;
-     -o-animation: fade_text 8s infinite ease-in;
-      animation: fade_text 8s infinite ease-in;
+
+  65% {
+    opacity: .5;
   }
-  .background_anim{
-    position: absolute;
-   width: .001vmin;
-   height: .001vmin;
-    border-radius: 50%;
-    opacity: .25;
-    z-index: -999;
+
+  90% {
+    opacity: .8;
   }
-  
-  .background_anim:nth-child(2) {
-    -webkit-box-shadow: 0 0 45vmax 45vmax #ff00ff;
-    box-shadow: 0 0 45vmax 45vmax #ff00ff;
-    -webkit-animation: hue 10s 0s linear infinite, move1 19s 0s linear infinite;
-    animation: hue 10s 0s linear infinite, move1 19s 0s linear infinite;
+
+  100% {
+    opacity: 1;
   }
-  
-  .background_anim:nth-child(3) {
-    -webkit-box-shadow: 0 0 45vmax 45vmax #ffffff;
-    box-shadow: 0 0 45vmax 45vmax #ffffff;
-    -webkit-animation: hue 15s 0s linear infinite, move2 25s 0s linear infinite;
-    animation: hue 15s 0s linear infinite, move2 25s 0s linear infinite;
+}
+
+@-o-keyframes fade_text {
+  0% {
+    opacity: 1;
   }
-  
-  .background_anim:nth-child(4) {
-    -webkit-box-shadow: 0 0 45vmax 45vmax #00ffff;
-    box-shadow: 0 0 45vmax 45vmax #00ffff;
-    -webkit-animation: hue 20s 0s linear infinite, move3 15s 0s linear infinite;
-    animation: hue 20s 0s linear infinite, move3 15s 0s linear infinite;
-    opacity: .2;
+
+  10% {
+    opacity: .8;
   }
-  @-webkit-keyframes 
-  hue { 0% {
-   -webkit-filter: hue-rotate(0deg);
-   filter: hue-rotate(0deg);
+
+  25% {
+    opacity: .5;
   }
-   100% {
-   -webkit-filter: hue-rotate(360deg);
-   filter: hue-rotate(360deg);
+
+  50% {
+    opacity: .3;
   }
+
+  65% {
+    opacity: .5;
   }
-  @keyframes 
-  hue { 0% {
-   -webkit-filter: hue-rotate(0deg);
-   filter: hue-rotate(0deg);
+
+  90% {
+    opacity: .8;
   }
-   100% {
-   -webkit-filter: hue-rotate(360deg);
-   filter: hue-rotate(360deg);
+
+  100% {
+    opacity: 1;
   }
+}
+
+@-moz-keyframes fade_text {
+  0% {
+    opacity: 1;
   }
-  @-webkit-keyframes 
-  move1 { 0% {
-   top: 0vh;
-   left: 50vw;
+
+  10% {
+    opacity: .8;
   }
-   25% {
-   left: 0vw;
+
+  25% {
+    opacity: .5;
   }
-   50% {
-   top: 100vh;
+
+  50% {
+    opacity: .3;
   }
-   75% {
-   left: 100vw;
+
+  65% {
+    opacity: .5;
   }
-   100% {
-   top: 0vh;
-   left: 50vw;
+
+  90% {
+    opacity: .8;
   }
+
+  100% {
+    opacity: 1;
   }
-  @keyframes 
-  move1 { 0% {
-   top: 0vh;
-   left: 50vw;
+}
+
+@-webkit-keyframes fade_text {
+  0% {
+    opacity: 1;
   }
-   25% {
-   left: 0vw;
+
+  10% {
+    opacity: .8;
   }
-   50% {
-   top: 100vh;
+
+  25% {
+    opacity: .5;
   }
-   75% {
-   left: 100vw;
+
+  50% {
+    opacity: .3;
   }
-   100% {
-   top: 0vh;
-   left: 50vw;
+
+  65% {
+    opacity: .5;
   }
+
+  90% {
+    opacity: .8;
   }
-  @-webkit-keyframes 
-  move2 { 0% {
-   top: 50vh;
-   left: 100vw;
+
+  100% {
+    opacity: 1;
   }
-   25% {
-   top: 100vh;
+}
+
+.text_fade {
+  -webkit-animation: fade_text 8s infinite ease-in;
+  -moz-animation: fade_text 8s infinite ease-in;
+  -o-animation: fade_text 8s infinite ease-in;
+  animation: fade_text 8s infinite ease-in;
+}
+
+.background_anim {
+  position: absolute;
+  width: .001vmin;
+  height: .001vmin;
+  border-radius: 50%;
+  opacity: .25;
+  z-index: -999;
+}
+
+.background_anim:nth-child(2) {
+  -webkit-box-shadow: 0 0 45vmax 45vmax #ff00ff;
+  box-shadow: 0 0 45vmax 45vmax #ff00ff;
+  -webkit-animation: hue 10s 0s linear infinite, move1 19s 0s linear infinite;
+  animation: hue 10s 0s linear infinite, move1 19s 0s linear infinite;
+}
+
+.background_anim:nth-child(3) {
+  -webkit-box-shadow: 0 0 45vmax 45vmax #ffffff;
+  box-shadow: 0 0 45vmax 45vmax #ffffff;
+  -webkit-animation: hue 15s 0s linear infinite, move2 25s 0s linear infinite;
+  animation: hue 15s 0s linear infinite, move2 25s 0s linear infinite;
+}
+
+.background_anim:nth-child(4) {
+  -webkit-box-shadow: 0 0 45vmax 45vmax #00ffff;
+  box-shadow: 0 0 45vmax 45vmax #00ffff;
+  -webkit-animation: hue 20s 0s linear infinite, move3 15s 0s linear infinite;
+  animation: hue 20s 0s linear infinite, move3 15s 0s linear infinite;
+  opacity: .2;
+}
+
+@-webkit-keyframes hue {
+  0% {
+    -webkit-filter: hue-rotate(0deg);
+    filter: hue-rotate(0deg);
   }
-   50% {
-   left: 0vw;
+
+  100% {
+    -webkit-filter: hue-rotate(360deg);
+    filter: hue-rotate(360deg);
   }
-   75% {
-   top: 0vh;
+}
+
+@keyframes hue {
+  0% {
+    -webkit-filter: hue-rotate(0deg);
+    filter: hue-rotate(0deg);
   }
-   100% {
-   top: 50vh;
-   left: 100vw;
+
+  100% {
+    -webkit-filter: hue-rotate(360deg);
+    filter: hue-rotate(360deg);
   }
+}
+
+@-webkit-keyframes move1 {
+  0% {
+    top: 0vh;
+    left: 50vw;
   }
-  @keyframes 
-  move2 { 0% {
-   top: 50vh;
-   left: 100vw;
+
+  25% {
+    left: 0vw;
   }
-   25% {
-   top: 100vh;
+
+  50% {
+    top: 100vh;
   }
-   50% {
-   left: 0vw;
+
+  75% {
+    left: 100vw;
   }
-   75% {
-   top: 0vh;
+
+  100% {
+    top: 0vh;
+    left: 50vw;
   }
-   100% {
-   top: 50vh;
-   left: 100vw;
+}
+
+@keyframes move1 {
+  0% {
+    top: 0vh;
+    left: 50vw;
   }
+
+  25% {
+    left: 0vw;
   }
-  @-webkit-keyframes 
-  move3 { 0% {
-   top: 100vh;
-   left: 50vw;
+
+  50% {
+    top: 100vh;
   }
-   25% {
-   left: 100vw;
+
+  75% {
+    left: 100vw;
   }
-   50% {
-   top: 0vh;
+
+  100% {
+    top: 0vh;
+    left: 50vw;
   }
-   75% {
-   left: 0vw;
+}
+
+@-webkit-keyframes move2 {
+  0% {
+    top: 50vh;
+    left: 100vw;
   }
-   100% {
-   top: 100vh;
-   left: 50vw;
+
+  25% {
+    top: 100vh;
   }
+
+  50% {
+    left: 0vw;
   }
-  @keyframes 
-  move3 { 0% {
-   top: 100vh;
-   left: 50vw;
+
+  75% {
+    top: 0vh;
   }
-   25% {
-   left: 100vw;
+
+  100% {
+    top: 50vh;
+    left: 100vw;
   }
-   50% {
-   top: 0vh;
+}
+
+@keyframes move2 {
+  0% {
+    top: 50vh;
+    left: 100vw;
   }
-   75% {
-   left: 0vw;
+
+  25% {
+    top: 100vh;
   }
-   100% {
-   top: 100vh;
-   left: 50vw;
+
+  50% {
+    left: 0vw;
   }
+
+  75% {
+    top: 0vh;
   }
+
+  100% {
+    top: 50vh;
+    left: 100vw;
+  }
+}
+
+@-webkit-keyframes move3 {
+  0% {
+    top: 100vh;
+    left: 50vw;
+  }
+
+  25% {
+    left: 100vw;
+  }
+
+  50% {
+    top: 0vh;
+  }
+
+  75% {
+    left: 0vw;
+  }
+
+  100% {
+    top: 100vh;
+    left: 50vw;
+  }
+}
+
+@keyframes move3 {
+  0% {
+    top: 100vh;
+    left: 50vw;
+  }
+
+  25% {
+    left: 100vw;
+  }
+
+  50% {
+    top: 0vh;
+  }
+
+  75% {
+    left: 0vw;
+  }
+
+  100% {
+    top: 100vh;
+    left: 50vw;
+  }
+}
