--- a/frontend/css/contact.css
+++ b/frontend/css/contact.css
@@ -1,19 +1,23 @@
-.body_contact,html{
+.body_contact,
+html {
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
 }
-#contact{
-    background-color: transparent!important;
+
+#contact {
+    background-color: transparent !important;
     background-image: url(../material_images/contact.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
 }
-.container{
+
+.container {
     margin-top: 2em;
 }
-.text-center{
+
+.text-center {
     display: flex;
     text-align: center;
     align-items: center;
@@ -34,24 +38,29 @@
     font-size: 20px;
     cursor: pointer;
     z-index: 1;
-	padding: 0.3em 2em;
+    padding: 0.3em 2em;
     border-radius: 1em;
 }
-.text-center a{
+
+.text-center a {
     padding: 0.4em;
     scale: 1.1;
 }
-.contact_taker{
+
+.contact_taker {
     width: 100%;
 }
-.submit_button{
+
+.submit_button {
     background: rgba(0, 0, 0, 0.6);
 }
+
 .text-center:hover,
-.submit_button:hover{
+.submit_button:hover {
     background-color: rgba(82, 82, 82, 0.6);
 }
-form{
+
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
