--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -1,30 +1,35 @@
-nav{
-    padding: .6em!important;
-    position: fixed!important;
+nav {
+    padding: .6em !important;
+    position: fixed !important;
     width: 100%;
     z-index: 10000;
 }
-.bg-body-tertiary{
-    background-color: rgba(0,0,0,0.3)!important;
+
+.bg-body-tertiary {
+    background-color: rgba(0, 0, 0, 0.3) !important;
 }
-nav span:nth-child(1) img{
+
+nav span:nth-child(1) img {
     border-radius: 50%;
     box-shadow: 0 0 10px 1px black;
     scale: 1.1;
     margin-left: 0.5em;
 }
-nav span:nth-child(1) img:nth-child(2){
+
+nav span:nth-child(1) img:nth-child(2) {
     backdrop-filter: blur(5px);
 }
-.nav-link{
+
+.nav-link {
     margin-right: 3em;
     font-size: 1.5em;
     text-decoration: none;
     color: #fff;
-	font-weight: 1000;
-	transition: 0.3s;
+    font-weight: 1000;
+    transition: 0.3s;
 }
-.nav-link:hover{
-	text-shadow: 0 0 10px #fff;
-	box-shadow: 0 0 10px 3px #fff ease-in;
+
+.nav-link:hover {
+    text-shadow: 0 0 10px #fff;
+    box-shadow: 0 0 10px 3px #fff ease-in;
 }
