updated full index

--- a/templete/partials/base.html
+++ b/templete/partials/base.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/navbar.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/index.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/info.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/footer.css' %}">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
@@ -59,6 +60,74 @@
       </nav>
     {% block content %}
     {% endblock content %}
+    <hr>
+    <footer>
+  
+      <div class="container">
+  
+        <div class="wrapper">
+  
+          <a href="#" class="footer-logo">
+            <img src="{% static './assets/images/logolight.png' %}" alt="SimpleBlog Logo" width="150" class="logo-light">
+          </a>
+  
+          <p class="footer-text">
+            Learn about Web accessibility, Web performance, and Database management.
+          </p>
+  
+        </div>
+  
+        <div class="wrapper">
+  
+          <p class="footer-title">Quick Links</p>
+  
+          <ul>
+  
+            <li>
+              <a href="#" class="footer-link">Advertise with us</a>
+            </li>
+  
+            <li>
+              <a href="#" class="footer-link">About Us</a>
+            </li>
+  
+            <li>
+              <a href="#" class="footer-link">Contact Us</a>
+            </li>
+  
+          </ul>
+  
+        </div>
+  
+        <div class="wrapper">
+  
+          <p class="footer-title">Legal Stuff</p>
+  
+          <ul>
+  
+            <li>
+              <a href="#" class="footer-link">Privacy Notice</a>
+            </li>
+  
+            <li>
+              <a href="#" class="footer-link">Cookie Policy</a>
+            </li>
+  
+            <li>
+              <a href="#" class="footer-link">Terms Of Use</a>
+            </li>
+  
+          </ul>
+  
+        </div>
+  
+      </div>
+  
+      <p class="copyright">
+        &copy; Copyright 2024 <a href="#">Mr-Analyzer</a>
+      </p>
+  
+    </footer>
 </body>
 
 <!-- jquery -->
