--- a/static/assets/css/info.css
+++ b/static/assets/css/info.css
@@ -1,11 +1,12 @@
 .info-data,
 .information-outlet .row span {
-    border: 1px solid rgba(128, 128, 128, 0.863);
-    border-bottom: 2px solid grey;
     padding: 0 .7em;
     border-radius: .3em;
 }
-
+.information-outlet .row span{
+    border: 1px solid rgba(128, 128, 128, 0.863);
+    border-bottom: 2px solid grey;
+}
 .information-outlet .row span {
     font-size: 1.4em;
     font-weight: 500;
@@ -23,9 +24,15 @@
 .info-data {
     display: none;
 }
-
+.info-btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+}
 .info-btn{
     cursor: pointer;
+    width: max-content;
 }
 .info-btn.active-btn{
     background-color: rgb(216, 216, 216);
@@ -39,4 +46,11 @@
 }
 .info-data .col-md-12{
     padding: 0;
+}
+.info-data img{
+    width: 250px;
+    object-fit: contain;
+}
+.step li{
+    list-style: none;
 }
