--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -1,3 +1,7 @@
+:root{
+    --upload-color:rgb(69, 69, 69);
+}
+
 .outlet {
     display: flex;
     align-items: left;
@@ -5,6 +9,16 @@
     flex-direction: column;
 }
 
+.outlet-text button{
+    border: none;
+    border-radius: .1em;
+    background-color: transparent;
+    font-weight: 800;
+    color: rgb(69, 69, 69);
+    font-family: poppins, sans-serif;
+    text-align: left;
+    line-height: 1em;
+}
 .outlet-text h1 {
     font-size: 3.8em;
     font-weight: 800;
@@ -41,17 +55,17 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    border: 2px solid rgb(1, 235, 252);
+    border: 2px solid var(--upload-color);
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+    box-shadow: 0px 0px 100px var(--upload-color), inset 0px 0px 10px var(--upload-color), 0px 0px 5px rgb(255, 255, 255);
     animation: flicker 2s linear infinite;
 }
 
 .input-div .icon {
-    color: rgb(1, 235, 252);
+    color: var(--upload-color);
     font-size: 2rem;
     cursor: pointer;
     animation: iconflicker 2s linear infinite;
@@ -68,8 +82,8 @@
 
 @keyframes flicker {
     0% {
-        border: 2px solid rgb(1, 235, 252);
-        box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+        border: 2px solid var(--upload-color);
+        box-shadow: 0px 0px 100px var(--upload-color), inset 0px 0px 10px var(--upload-color), 0px 0px 5px rgb(255, 255, 255);
     }
 
     5% {
@@ -78,8 +92,8 @@
     }
 
     10% {
-        border: 2px solid rgb(1, 235, 252);
-        box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+        border: 2px solid var(--upload-color);
+        box-shadow: 0px 0px 100px var(--upload-color), inset 0px 0px 10px var(--upload-color), 0px 0px 5px rgb(255, 255, 255);
     }
 
     25% {
@@ -88,13 +102,13 @@
     }
 
     30% {
-        border: 2px solid rgb(1, 235, 252);
-        box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+        border: 2px solid var(--upload-color);
+        box-shadow: 0px 0px 100px var(--upload-color), inset 0px 0px 10px var(--upload-color), 0px 0px 5px rgb(255, 255, 255);
     }
 
     100% {
-        border: 2px solid rgb(1, 235, 252);
-        box-shadow: 0px 0px 100px rgb(1, 235, 252), inset 0px 0px 10px rgb(1, 235, 252), 0px 0px 5px rgb(255, 255, 255);
+        border: 2px solid var(--upload-color);
+        box-shadow: 0px 0px 100px var(--upload-color), inset 0px 0px 10px var(--upload-color), 0px 0px 5px rgb(255, 255, 255);
     }
 }
 
