--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -27,8 +27,7 @@
     text-align: left;
     line-height: 1em;
 }
-
-.outlet-text h3 {
+h1,h2,h3,h4,h5,h6,.outlet-text h3 {
     font-weight: 600;
     color: rgb(69, 69, 69);
     font-family: poppins, sans-serif;
