--- a/templete/partials/base.html
+++ b/templete/partials/base.html
@@ -1,139 +1,103 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mr-Analyzer</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mr-Analyzer</title>
 
-    <!-- favicon -->
-    <link rel="shortcut icon" href="../../static/assets/images/analyzer.png" type="image/png">
+  <!-- favicon -->
+  <link rel="shortcut icon" href="../../static/assets/images/analyzer.png" type="image/png">
 
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-        <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!-- bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="{% static 'assets/css/navbar.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/index.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/info.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/footer.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/info.css' %}">
+  <link rel="stylesheet" href="{% static 'assets/css/footer.css' %}">
 </head>
-<body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../../static/assets/images/logolight.png" width="180px" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="../../static/assets/images/logolight.png" width="180px" alt=""></h5>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Analysis</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+
+<body style="background-image: url(../../static/assets/images/whatsappBack.png);">
+  <nav class="navbar" style="background: transparent;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../../static/assets/images/logolight.png" width="180px" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="../../static/assets/images/logolight.png"
+              width="180px" alt=""></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-      </nav>
-    {% block content %}
-    {% endblock content %}
-    <hr>
-    <footer>
-  
-      <div class="container">
-  
-        <div class="wrapper">
-  
-          <a href="#" class="footer-logo">
-            <img src="{% static './assets/images/logolight.png' %}" alt="SimpleBlog Logo" width="150" class="logo-light">
-          </a>
-  
-          <p class="footer-text">
-            Learn about Web accessibility, Web performance, and Database management.
-          </p>
-  
-        </div>
-  
-        <div class="wrapper">
-  
-          <p class="footer-title">Quick Links</p>
-  
-          <ul>
-  
-            <li>
-              <a href="#" class="footer-link">Advertise with us</a>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
-  
-            <li>
-              <a href="#" class="footer-link">About Us</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Analysis</a>
             </li>
-  
-            <li>
-              <a href="#" class="footer-link">Contact Us</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
             </li>
-  
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
           </ul>
-  
         </div>
-  
-        <div class="wrapper">
-  
-          <p class="footer-title">Legal Stuff</p>
-  
-          <ul>
-  
-            <li>
-              <a href="#" class="footer-link">Privacy Notice</a>
-            </li>
-  
-            <li>
-              <a href="#" class="footer-link">Cookie Policy</a>
-            </li>
-  
-            <li>
-              <a href="#" class="footer-link">Terms Of Use</a>
-            </li>
-  
-          </ul>
-  
-        </div>
-  
       </div>
-  
-      <p class="copyright">
-        &copy; Copyright 2024 <a href="#">Mr-Analyzer</a>
-      </p>
-  
-    </footer>
+    </div>
+  </nav>
+  {% block content %}
+  {% endblock content %}
+  <hr style="padding: 0;margin: 0;">
+  <footer>
+    <div class="container">
+      <div class="wrapper">
+        <a href="#" class="footer-logo"> <img src="{% static './assets/images/logolight.png' %}" alt="SimpleBlog Logo"
+            width="150" class="logo-light"> </a>
+        <p class="footer-text"> Learn about Web accessibility, Web performance, and Database management. </p>
+      </div>
+      <div class="wrapper">
+        <p class="footer-title">Quick Links</p>
+        <ul>
+          <li> <a href="#" class="footer-link">Advertise with us</a> </li>
+          <li> <a href="#" class="footer-link">About Us</a> </li>
+          <li> <a href="#" class="footer-link">Contact Us</a> </li>
+        </ul>
+      </div>
+      <div class="wrapper">
+        <p class="footer-title">Legal Stuff</p>
+        <ul>
+          <li> <a href="#" class="footer-link">Privacy Notice</a> </li>
+          <li> <a href="#" class="footer-link">Cookie Policy</a> </li>
+          <li> <a href="#" class="footer-link">Terms Of Use</a> </li>
+        </ul>
+      </div>
+    </div>
+    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a> </p>
+  </footer>
 </body>
 
 <!-- jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<script src="{% static 'assets/js/index.js' %}" ></script>
+<script src="{% static 'assets/js/index.js' %}"></script>
+
 </html>
