added creator model

--- a/templete/partials/base.html
+++ b/templete/partials/base.html
@@ -69,6 +69,7 @@
 </head>
 
 <body style="background-image: url(../../static/assets/images/whatsappBack.png);">
+  {% include 'core/creator.html' %}
   <div class="loader-container" id="loader-container">
     <div class="loader-wrapper">
       <div class="loader" id="loader"></div>
@@ -133,7 +134,8 @@
         </ul>
       </div>
     </div>
-    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a> </p>
+    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a><br>
+    Developer- Ctrl+shift+z </p>
   </footer>
 </body>
 
