structured the analyzer with templete ans static in app

--- a/whatsapp/templates/whatsapp/app/analysis.html
+++ b/whatsapp/templates/whatsapp/app/analysis.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends 'whatsapp/partial/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -13,8 +13,8 @@
                     <div class="row justify-content-center">
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/graph.png">
-                                    <img src="../../static/assets/temp/graph.png" class="card-img-top" alt="Graph">
+                                <a href="../../static/whatsapp/temp/graph.png">
+                                    <img src="../../static/whatsapp/temp/graph.png" class="card-img-top" alt="Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Activity Trends</h5>
@@ -25,8 +25,8 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/time.png">
-                                    <img src="../../static/assets/temp/time.png" class="card-img-top" alt="Time Graph">
+                                <a href="../../static/whatsapp/temp/time.png">
+                                    <img src="../../static/whatsapp/temp/time.png" class="card-img-top" alt="Time Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Time Distribution</h5>
@@ -39,8 +39,8 @@
                         
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/emoji.png">
-                                    <img src="../../static/assets/temp/emoji.png" class="card-img-top" alt="Emoji Graph">
+                                <a href="../../static/whatsapp/temp/emoji.png">
+                                    <img src="../../static/whatsapp/temp/emoji.png" class="card-img-top" alt="Emoji Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Emoji Usage</h5>
@@ -51,8 +51,8 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/active.png">
-                                    <img src="../../static/assets/temp/active.png" class="card-img-top" alt="Active Hours Graph">
+                                <a href="../../static/whatsapp/temp/active.png">
+                                    <img src="../../static/whatsapp/temp/active.png" class="card-img-top" alt="Active Hours Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Active Hours</h5>
@@ -63,8 +63,8 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/usertime.png">
-                                    <img src="../../static/assets/temp/usertime.png" class="card-img-top" alt="User Activity Graph">
+                                <a href="../../static/whatsapp/temp/usertime.png">
+                                    <img src="../../static/whatsapp/temp/usertime.png" class="card-img-top" alt="User Activity Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">User Activity</h5>
@@ -75,8 +75,8 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/heatmap.png">
-                                    <img src="../../static/assets/temp/heatmap.png" class="card-img-top" alt="Heatmap Graph">
+                                <a href="../../static/whatsapp/temp/heatmap.png">
+                                    <img src="../../static/whatsapp/temp/heatmap.png" class="card-img-top" alt="Heatmap Graph">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Message Heatmap</h5>
@@ -87,8 +87,8 @@
 
                         <div class="col-md-4 mb-4">
                             <div class="card">
-                                <a href="../../static/assets/temp/word.png">
-                                    <img src="../../static/assets/temp/word.png" class="card-img-top" alt="Word Cloud">
+                                <a href="../../static/whatsapp/temp/word.png">
+                                    <img src="../../static/whatsapp/temp/word.png" class="card-img-top" alt="Word Cloud">
                                 </a>
                                 <div class="card-body">
                                     <h5 class="card-title text-center">Word Cloud</h5>
