--- a/whatsapp/templates/whatsapp/app/whatsapp.html
+++ b/whatsapp/templates/whatsapp/app/whatsapp.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends 'whatsapp/partial/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -76,7 +76,7 @@
                 <div class="col-md-12 mx-1 info-data whatsapp-info active">
                     <div class="row" style="justify-content: center;align-items: center;">
                         <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
-                            <img src="../../static/assets/images/whatsapp.png" alt="">
+                            <img src="../../static/whatsapp/images/whatsapp.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <div class="row">
@@ -138,7 +138,7 @@
                 <div class="col-md-12 mx-1 info-data instagram-info disabledthings">
                     <div class="row" style="justify-content: center;align-items: center;">
                         <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
-                            <img src="../../static/assets/images/insta.png" alt="">
+                            <img src="../../static/whatsapp/images/insta.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <div class="row">
@@ -190,7 +190,7 @@
                 <div class="col-md-12 mx-1 info-data phone-info disabledthings">
                     <div class="row" style="justify-content: center;align-items: center;">
                         <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
-                            <img src="../../static/assets/images/phone.png" alt="">
+                            <img src="../../static/whatsapp/images/phone.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <div class="row">
