structured whole analyzer

--- a/whatsapp/templates/whatsapp/app/whatsapp.html
+++ b/whatsapp/templates/whatsapp/app/whatsapp.html
@@ -1,7 +1,7 @@
 {% extends 'whatsapp/partial/base.html' %}
 {% load static %}
 
-{% block content %}
+{% block whatsapp %}
 
 <div class="container">
     <form method="post" enctype="multipart/form-data">
@@ -227,4 +227,4 @@
 
 
 
-{% endblock content %}
+{% endblock whatsapp %}
