--- a/whatsapp/templates/whatsapp/partial/base.html
+++ b/whatsapp/templates/whatsapp/partial/base.html
@@ -1,149 +1,15 @@
+{% extends 'core/partial/main-base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mr-Analyzer</title>
+{% block stylecontent %}
+  {% include 'whatsapp/partial/style.html' %}
+{% endblock stylecontent %}
 
-  <!-- favicon -->
-  <link rel="shortcut icon" href="../../static/whatsapp/images/analyzer.png" type="image/png">
+{% block content %}
+  {% block whatsapp %}
+  {% endblock whatsapp %}
+{% endblock content %}
 
-  <!-- font awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  <!-- bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <!-- bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-  
-    {% include 'whatsapp/partial/style.html' %}
-    <style>
-      .loader-container{
-        display: none;
-      }
-      .loader-wrapper{
-        width: 100%;
-        height: 100vh;
-        z-index: 1000;
-        backdrop-filter: blur(2px);
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .loader {
-        border: 16px solid #242424;
-        border-top: 16px solid #3498db;
-        border-radius: 50%;
-        width: 80px;
-        height: 80px;
-        animation: spin 2s linear infinite;
-        margin: auto;
-      }
-    
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-    
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
-</head>
-
-<body style="background-image: url(../../static/whatsapp/images/whatsappBack.png);">
-  <div class="loader-container" id="loader-container">
-    <div class="loader-wrapper">
-      <div class="loader" id="loader"></div>
-    </div>
-  </div>
-  <nav class="navbar" style="background: transparent;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../../static/whatsapp/images/logolight.png" width="180px" alt=""></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="../../static/whatsapp/images/logolight.png"
-              width="180px" alt=""></h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Analysis</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </nav>
-  {% block content %}
-  {% endblock content %}
-  <hr style="padding: 0;margin: 0;">
-  <footer>
-    <div class="container">
-      <div class="wrapper">
-        <a href="#" class="footer-logo"> <img src="{% static './whatsapp/images/logolight.png' %}" alt="SimpleBlog Logo"
-            width="150" class="logo-light"> </a>
-        <p class="footer-text"> Learn about Web accessibility, Web performance, and Database management. </p>
-      </div>
-      <div class="wrapper">
-        <p class="footer-title">Quick Links</p>
-        <ul>
-          <li> <a href="#" class="footer-link">Advertise with us</a> </li>
-          <li> <a href="#" class="footer-link">About Us</a> </li>
-          <li> <a href="#" class="footer-link">Contact Us</a> </li>
-        </ul>
-      </div>
-      <div class="wrapper">
-        <p class="footer-title">Legal Stuff</p>
-        <ul>
-          <li> <a href="#" class="footer-link">Privacy Notice</a> </li>
-          <li> <a href="#" class="footer-link">Cookie Policy</a> </li>
-          <li> <a href="#" class="footer-link">Terms Of Use</a> </li>
-        </ul>
-      </div>
-    </div>
-    <p class="copyright"> &copy; Copyright 2024 <a href="#">Mr-Analyzer</a><br>
-    Developer- Ctrl+shift+z </p>
-  </footer>
-</body>
-
-<!-- jquery -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-  integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-{% include 'whatsapp/partial/script.html' %}
-
-<script>
-  document.querySelector(".Analysis-btn").addEventListener("click", function() {
-      document.getElementById("loader-container").style.display = "block"; // Show the loader
-  });
-</script>
-</html>
+{% block scriptcontent %}
+  {% include 'whatsapp/partial/script.html' %}
+{% endblock scriptcontent %}
